# backgammon-simd

./: Cargo.toml  README.md
benches/: games.rs  movegens.rs
src/: game.rs  lib.rs
src/compat/: mod.rs  movegen.rs  tests.rs
src/decision/: mod.rs
src/movegen/: basic.rs  mod.rs  simd.rs
src/randgen/: mod.rs
src/types/: board.rs  board_.rs  dice.rs  mod.rs  prim.rs
src/util/: timings.rs
