[package]
    name    = "backgammon-simd"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    # colored      = "2.0.4"
    fixed-map    = "0.9"
    itertools    = "0.11"
    once_cell    = "1"
    rand         = "0.8"
    rand_distr   = "0.4"
    serde        = { version = "1", features = ["derive"] }
    strum        = "0.25"
    strum_macros = "0.25"
    backgammon   = { version = "0.6", optional = true }
    # backgammon = { path = "../vendor/backgammon", optional = true }
    anyhow = "1"

[dev-dependencies]
    criterion = "0.5"

[features]
    time              = []
    backgammon-compat = ["dep:backgammon"]

[[bench]]
    name    = "movegens"
    harness = false

[[bench]]
    name    = "games"
    harness = false
